--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 #searchbox {
     width: 500px;
     height: 40px;
-    margin: 150px auto;
+    padding-left: 10px;
+    margin: 15px auto;
     background: #444;
     background: rgba(0,0,0,.2);
     border-radius:  3px;
@@ -13,9 +14,28 @@
     border: 0;
     padding: 0;
     cursor: pointer;
-    height: 40px;
+    height: 45px;
     width: 120px;
     color: black;
     border-left: 1px solid #fff;
     border-radius: 0 3px 3px 0;
 }   
+
+#search-area {
+    padding-left: 20px;
+}
+
+#listed-recipes {
+    position: relative;
+    float: left;
+    padding-left: 20px;
+    font-size: 25px;
+
+}
+
+#listed-nutrients {
+    position: relative;
+    float: right;
+    padding-right: 400px;
+    font-size: 25px;
+}
