--- a/style.css
+++ b/style.css
@@ -19,23 +19,31 @@
     color: black;
     border-left: 1px solid #fff;
     border-radius: 0 3px 3px 0;
-}   
+}
 
 #search-area {
     padding-left: 20px;
 }
 
-#listed-recipes {
+recipes {
+    display: inline-block;
+    border: solid 0px black;
+    height: 800px;
+    width: 45%;
+    overflow: scroll;
     position: relative;
-    float: left;
     padding-left: 20px;
     font-size: 25px;
 
 }
 
-#listed-nutrients {
+nutrient-info {
+    display: inline-block;
+    border: solid 0px black;
+    height: 800px;
+    width: 45%;
+    overflow: scroll;
     position: relative;
-    float: right;
-    padding-right: 400px;
+    padding-left: 50px;
     font-size: 25px;
 }
