--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: lightgrey;
+}
+
 #searchbox {
     width: 500px;
     height: 40px;
@@ -14,6 +18,7 @@
     border: 0;
     padding: 0;
     cursor: pointer;
+    background: #B0B0B0;
     height: 45px;
     width: 120px;
     color: black;
